<resources>
    <string name="app_name">Alura Viajens</string>

    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_banner_inicial">Banner Inicial dos Pacotes</string>

    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="preco_final">Preço final:</string>
    <string name="imagem_do_pacote">Imagem do Pacote</string>
    <string name="descricao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes_vencimento_cartao">MM</string>
    <string name="ano_vencimento_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_cartao">Nome no cartão</string>
    <string name="botao_finalizar_compra">Finalizar compra</string>
    <string name="mascara_nome_cartao">ABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_compra">Confira o resumo da compra:</string>
    <string name="banner_parabens">Banner Parabens</string>
    <string name="imagem_do_local">Imagem do local</string>
</resources>
